<resources>
  <string name="app_name">GreenPrint</string>
  <string name="base_url">https://apis.berkeley.edu/</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">GreenPrint</string>
  <string name="nav_header_subtitle">Reducing Carbon One Step At A Time</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>


  <string name="hello_home_page">Hello Home Page</string>


  <string name="hello_questions_page">Hello Questions</string>
  <string name="hello_scroll">This Page Needs to Scroll Questions</string>
  <string name="survey">Survey</string>
  <string name="home">Home</string>
  <string name="score">Score</string>
  <string name="menu">Menu</string>

  <string name="question_1">1) What is your zip code?</string>
  <string name="question_2">2) How many people live in your house?</string>
  <string name="question_3">3) How many adults live in your house?</string>
  <string name="question_4">4) How many children live in your house?</string>
  <string name="question_5">5) What is your annual income?</string>
  <string name="question_6">6) How large is your house (square feet)?</string>
  <string name="question_7">7) What is your annual electric bill?</string>
  <string name="question_8">8) What is your annual natural gas bill?</string>
  <string name="question_9">9) What is your annual heating oil bill?</string>
  <string name="question_10">10) What is your annual water/sewage bill?</string>
  <string name="question_11">11) How many days do you heat your house per year?</string>
  <string name="question_12">12) How many days do you cool your house per year?</string>
  <string name="question_13">13) How many miles do you drive in your primary vehicle per year?</string>
  <string name="question_14">14) What is the MPG of that vehicle?</string>
  <string name="question_15">15) How many miles do you drive in your secondary vehicle per year?</string>
  <string name="question_16">16) What is the MPG of that vehicle?</string>
  <string name="question_17">17) How many miles do you drive in your third vehicle per year?</string>
  <string name="question_18">18) What is the MPG of that vehicle?</string>
  <string name="question_19">19) How many miles do you travel by plane per year?</string>
  <string name="question_20">20) How many miles do you travel using public transportation per year?</string>

  <string name="takeaction_1">1) Switch to Cfl to reduce footprint by ? tons/year</string>
  <string name="takeaction_2">2) Maintain my vehicles to reduce footprint by ? tons/year</string>
  <string name="takeaction_3">3) More efficient vehicle to reduce footprint by ? tons/year</string>
  <string name="takeaction_4">4) Reduce air travel to reduce footprint by ? tons/year</string>
  <string name="takeaction_5">5) Telecommute to work to reduce footprint by ? tons/year </string>
  <string name="takeaction_6">6) Minimize summer thermostat usage to reduce footprint by ? tons/year</string>
  <string name="takeaction_7">7) Offset housing to reduce footprint by ? tons/year</string>
  <string name="takeaction_8">8) Get an Energy Star fridge to reduce footprint ?tons/year</string>
  <string name="takeaction_9">9) Minimize winter thermostat usage to reduce footprint by ? tons/year</string>
  <string name="takeaction_10">10) Offset transportation to reduce footprint by ? tons/year</string>
  <string name="takeaction_11">11) Ride my bike to instead of driving to reduce by ? tons/year</string>
  <string name="takeaction_12">12) Purchase Green Electricity to reduce by ? tons/year</string>
  <string name="takeaction_13">13) Take public transportation to reduce footprint by ? tons/year</string>
  <string name="takeaction_14">14) Carpool to work to reduce footprint by ? tons/year</string>
  <string name="takeaction_15">15) Practice Eco driving to reduce by ? tons/year</string>


  <string name="hello_blank_fragment">Hello Score fragment</string>
  <string name="welcome_to_greenprint">Welcome to GreenPrint!</string>
  <string name="number_hint">number</string>
  <string name="zip_code_hint">Zip code</string>
  <string name="your_footprint">Your Footprint: </string>
  <string name="retake_survey">Retake Survey</string>
  <string name="score_display">Score</string>
  <string name="update_score">Update Score</string>
  <string name="update">Update</string>
  <string name="update_your_footprint">Update your footprint:</string>
  <string name="apply_update">Apply</string>
  <string name="back">Back</string>
  <string name="score_format">%.2f</string>
  <string name="greenprint_logo">GreenPrint Logo</string>
  <string name="history">History</string>
  <string name="score_history">Score History</string>
  <string name="date_category">Date:</string>
  <string name="score_category">Score:</string>


</resources>
