...
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/scrollViewBackground"
  android:padding="@dimen/activity_horizontal_margin"
  android:id="@+id/survey_id2"
  >

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
...
      android:inputType="number"
      android:hint="@string/number_hint">

      <requestFocus/>
    </EditText>
    <Button
      android:id="@+id/submit_button"
      android:layout_width="100dp"
      android:layout_height="80dp"
      android:text="Submit"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="@+id/guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/question_20_id"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="40dp"
...
