...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.75"/>

  <Button
    android:id="@+id/retake_survey_button"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:text="@string/retake_survey"
    android:textColor="@color/colorPrimaryDark"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/center_guideline"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"

    />

  <Button
    android:id="@+id/update_score_button"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:text="@string/update_score"
    android:textColor="@color/colorPrimaryDark"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
...
